force-app/main/default/objects/ScratchOrgInfo__c/ScratchOrgInfo__c.object-meta.xml
<CustomObject>
    <description>This object is used to store information about scratch org info used in scratch org pool (only used in production)</description>
    <label>ScratchOrgInfo</label>
    <nameField>
        <label>ScratchOrgInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScratchOrgInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>