force-app/main/default/objects/ScratchOrgInfo__c/fields/CICDId__c.field-meta.xml
<CustomField>
    <fullName>CICDId__c</fullName>
    <description>Merge request Id</description>
    <label>CICDId</label>
    <length>150</length>
    <type>Text</type>
</CustomField>