force-app/main/default/objects/ScratchOrgInfo__c/fields/DaysLeft__c.field-meta.xml
<CustomField>
    <fullName>DaysLeft__c</fullName>
    <description>Number of days before scratch org expires</description>
    <formula>DurationDays__c - (NOW() - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days before scratch org expiration</inlineHelpText>
    <label>Number of days before expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>