force-app/main/default/objects/ScratchOrgInfo__c/fields/DurationDays__c.field-meta.xml
<CustomField>
    <fullName>DurationDays__c</fullName>
    <description>Store the duration delay of the associated scratch org</description>
    <label>Duration Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>