force-app/main/default/objects/ScratchOrgInfo__c/fields/ExpiresSoon__c.field-meta.xml
<CustomField>
    <fullName>ExpiresSoon__c</fullName>
    <description>Indicates if the scratch org will expires soon (actually true if % is less than 75% )</description>
    <formula>IF( DurationDays__c &gt; 1, (DaysLeft__c / DurationDays__c) &lt;= 0.75, (DaysLeft__c / DurationDays__c) &lt;= 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indique si la scratch est proche de sa date d&apos;expiration (aujourd&apos;hui la condition renvoie vrai s&apos;il reste plus de 75% de sa durée de vie)</inlineHelpText>
    <label>Expiration proche ?</label>
    <type>Checkbox</type>
</CustomField>