force-app/main/default/objects/ScratchOrgInfo__c/fields/OrgName__c.field-meta.xml
<CustomField>
    <fullName>OrgName__c</fullName>
    <description>Scratch org name</description>
    <label>Org Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>