force-app/main/default/objects/ScratchOrgInfo__c/fields/SfdxAuthUrl__c.field-meta.xml
<CustomField>
    <fullName>SfdxAuthUrl__c</fullName>
    <description>Used to store sfdx auth url to bea able to connect to Scratch Org in CICD</description>
    <label>SfdxAuthUrl</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>