force-app/main/default/objects/ScratchOrgInfo__c/fields/ToBeDeleted__c.field-meta.xml
<CustomField>
    <fullName>ToBeDeleted__c</fullName>
    <description>Indicates if scratch org is expired and scratch org info must be deleted or not</description>
    <formula>(DaysLeft__c / DurationDays__c) &lt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A supprimer ?</label>
    <type>Checkbox</type>
</CustomField>