force-app/main/default/objects/ScratchOrgInfo__c/listViews/AllScratchOrgInfo.listView-meta.xml
<ListView>
    <fullName>AllScratchOrgInfo</fullName>
    <columns>NAME</columns>
    <columns>CICDId__c</columns>
    <columns>OrgName__c</columns>
    <columns>SfdxAuthUrl__c</columns>
    <columns>Status__c</columns>
    <columns>ToBeDeleted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DurationDays__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>